--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,12 @@
 {
   "display_name": "游戏合集",
-  "loading_order": 1,
+  "loading_order": 50,
   "js": "index.js",
   "css": "style.css",
   "author": "3538352833",
   "version": "1.0.0",
   "homePage": "https://github.com/3538352833/tavern_helper_template",
-  "auto_update": true,
-  "extension_type": "floating"
+  "auto_update": true
 }
 
 
