--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,9 @@
   "loading_order": 1,
   "js": "index.js",
   "css": "style.css",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "homePage": "https://github.com/3538352833/tavern_helper_template",
-  "auto_update": true,
-  "extension_type": "floating"
+  "auto_update": true
 }
 
 
