--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,12 @@
   "loading_order": 1,
   "js": "index.js",
   "css": "style.css",
+  "author": "3538352833",
   "version": "1.1.0",
   "homePage": "https://github.com/3538352833/tavern_helper_template",
   "auto_update": true
 }
+
 
 
 
