--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
-  "display_name": "游戏合集",
-  "loading_order": 1,
+  "display_name": "小游戏合集",
+  "loading_order": 100,
   "js": "index.js",
   "css": "style.css",
-  "author": "3538352833",
+  "author": "tavern_helper_template",
   "version": "1.0.0",
-  "homePage": "https://github.com/3538352833/tavern_helper_template",
+  "homePage": "https://github.com/your/extension",
   "auto_update": true
 }
+
 
 
 
