--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,10 @@
   "css": "style.css",
   "author": "tavern_helper_template",
   "version": "1.0.0",
-  "homePage": "https://github.com/your/extension",
+  "homePage": "https://github.com/3538352833/tavern_helper_template",
   "auto_update": true
 }
+
 
 
 
